tooling/nargo_cli/tests/snapshots/execute__tests__brillig_arrays_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8959654778400456397",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91YTY/TMBAd56NtWlZdwQGJG0jcs5uWllsRi8R/4BS6qsSJE0gcEDlwQ4K/TF089OVlmkUQg5aRIjueycyb8die2MkPSvaPC/0stA7aVNqkvE1oyz+jiwF1lbEwuluAMYmA8UApTX4ip0md+hbaIrQJ8NMBnS7I7pD61+ViXRj+DYi/KiimsfSncfSX46DnRXPUz75oHjiJNk/LyH5WZ9LNfUe+ZXFsLxzZE/JTyP5UoubUhSN7iofjo/0zlWmOeBzxsqbrh/Lypu2Hp8n+uQ9ynFsJyD2C/uPQj5yP68jrurzX47OOjRv5SRq3FMY0rhrnCcoTrwBe1rTtTMN7BnZQl+LISf5heJ+HdgTf6Pfnhv0R2W/hNsY4LoUhXxjyo/3zIPRncjzLnjdHfTHOsivAMpRuj9/nf6X+Stxz50zs4tGT8nC/tPY4JasAxfX9FPSynPyH/j4DvSynhPmaNcP7vFqXpdrTvSIX2/8M+Ci/Du9Twq+x2vwmzt2qvthV9a5e1tfXi219l/R7SiBOuC6cdOcxlfacedI9YC6nax6h73LpnpFXTZvHPwWx6zeODdri2Fi+ur+Ek2sOPWvYpmJLpLvmsF7JaexlaL2/78k/nK++OudcTp/JsesBrkFlON3Lvvot5h6zp4Wfjw9Bl+6jOfiYE6YR8FJDnnN3bMiPQIbndgy8DGIQcW4vf8U3tD+Xbu6PCCvq2gyEUyhGeQ+OnGRfEb5JnFia+92EbEf6j6sc2ROx51Htz6Wbc4wVc3szEE62lRs4cuKp7JbwFXFiac4j2joVZwdjfIZbcb4pFp6uGjsWb25JLKy9oy8WyYlYWOtbZd9SLP7F+u7bR7n2xFgkhn8i/bWdtUZU9h3FItJ+Y8ZCbfnabui6u15V6+3lYrt6vazq6smNdbf13481hie9O8C7BZTHXET5jyq7fz6FPt8noT0v97VHzp1oDzqMsaxpj1l3DngXo/Jqe9p0MSpvBjysfzzdCe8YL9SlOHKS/xLedU7w/kS/PzfsT8h+C7cxxncxM0N+Zsj7+fms+kKLvg99v3mwSfpxjLFp7vi8/g790XW8WRsAAA==",
  "debug_symbols": "ldfRioMwEAXQf8mzD5kkM0n6K8tSbGuLIFqsXVhK/31jqWyJAbkvYiSHxNxEmYc6NYf7Zd/25+Gmdl8P1Q3HemqHPrUez0odxrbr2sv+87HS88WGV//bte7n5m2qx0ntSEKlmv6U7gIlf267Ru1YP78rZSMqnIYFwcLAwsLCFUWktzCkc8GwEFh4WARYRFRwcQzj/SJWq8sRFaK3hOSCYGFgYWEBZy5w5gJnLnDmXsOCYGFgYWFRPOeOli+DMyYXDAuBhYdFgEVERdCwIFgYWBQzd2IXIT4XDhYMC9kQfvUeHhYBFhEVUcOinHmQRcT8DEYDCwsLtyU4FwwLgYWHRYBFMXMm/RZMLhOkNU5oi8QVMTixOHE4KSbPdtnzbP2KCE78BnFmRQJOIkxI46ScPi+7kkWviMGJ3SK8Ig4njBPByDO1fuqxrQ9d867azvf++FHETb/XJqvnruNwbE73sZkru/+ibg6LDFXkTJrKvELGVta+sk8NporlNce5X/qNktFp/DSHPw==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested are array reads and writes\nfn main(x: [Field; 3]) {\n    // Safety: testing context\n    unsafe {\n        read_array(x);\n        read_write_array(x);\n    }\n}\n\nunconstrained fn read_array(x: [Field; 3]) {\n    assert(x[0] == 1);\n    let y = [1, 5, 27];\n\n    assert(y[x[0]] == 5);\n}\n\nunconstrained fn read_write_array(x: [Field; 3]) {\n    let mut y = x;\n\n    y[0] = 5;\n\n    assert(y[0] == 5);\n    assert(y[1] == 2);\n    assert(y[2] == 3);\n\n    assert(x[0] == 1);\n    assert(x[1] == 2);\n    assert(x[2] == 3);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_arrays/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
