tooling/nargo_cli/tests/snapshots/execute__tests__brillig_blake2s_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "15556312196087248427",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "result",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9WbiVLbMBCG5cQBHEo5et9puW87thObMxw9XiMU8hx59GpBahTxp2XKujOrmR07n4WkT5YVxzKBukuXOgZmP9BRN1tKMx4LAKsBVgcsBKwB2BRg04DNABYB1gRsFrAngM0B9hSwecAWAFsEbAmwZ4A9B+wFYC8BewXYa8DeAPYWsHeAvQfsA2AfAfsEWAuwz4B9AWwZsBXDaBwqNRrjdhy6yR7rmW38uJQwlhVX1cZAQBtrAtpYF9DGkLGN7nXUMvurOtZ0rOvY0LGpY0vHto4dHbs69nTsU/066AJp60h1ZDpyHR0dXR2FjlLHgY5DHUc6jnWc6Dg1Hmc6znVcqLvvs7ELnxrjTwZrgK0DtgHYJmBbgG0DtgPYLmB7gO0DFgOWANYGLAUsAywHrANYF7ACsBKwA8AOATsC7BiwE8BOAesBdgbYOWAXgF0a5qaa2fbMNo07WXbTbd8kadKP2+VVkcdZftUpkiLJi/y6XaTpTZEV3fKq7MZlkqU3ySAv04G54BqKbyJYVfyTVRXOU4zOa0Kcpxmd14U4zzA6bwhxjhidN4U4Nxmdt4Q4zzI6bwtxfsLovCPEeY7ReVeI81NG5z0hzvOMzvtCnBcYnWMhzouMzokQ5yVG57YQ52eMzqkQ5+eMzpkQ5xeMzrkQ55eMzh0hzq8YnbtCnF8zOhdCnN8wOpdCnN8yOh8IcX7H6HwoxPk9o/OREOcPjM7HQpw/MjqfCHH+xOh8KsS5xejcE+L8mdH5TIjzF0bncyHOy4zOF0KcVxidLxmdaS3avui06vgHpg/q5jitJdPaqn3BjtaiaG2G1iro2T09y6Znu/Ssk5790bMwejZEz0ro2QH9lqbflvRbi3570L043ZvSvRrdu9B3OX230VzfUncvcNG1QWNlRU1O/gsvkXf+7Jp7j6nvI69ezvKLuFNGwI+x/WmkRue2gvLzyCmzgvJv17opXQ5H5fsuytnafP7fuHm/Onm+TsjzzcnzbUKe706e7xPy/HDy/PDyRM6+69Mzn+NHpCLOsorPTT6nxs+Hclxs3WE1dXcCrz7leSqv/qaq9DpIAq8+2x6/f+z+nM0zHLUn8I6Fw/se9lhjOO5BiebpZSefP7ZqTr49Z39fjbehBhwC4FDl+NLjt6x2DLVjdA788xMOx+t2j7nnIHT6c9nrnyrGnNs/1Vzf7dt1j0nzrR0P00P1O9W9/nT7yPbZjJvfOxY5x8LheD1N8zl06nHLsu1oePl3zed5s51y/sb+/QKof8qrf6zdgLl95JdVB8zmp3usNbM/q0b/gHBg2EPm2IrOf/LQOday/zXH1r32/G1+qug7KLf1NkB70Jy/qO7fH/jts2W1zPZP8/isGt3/hkN+x24xeonbXqsNNd7/yqu/4eU/NZ+bTvtd794/tnPQ7SeDtD/o5/3r6+xnf8krX3n99AsbWH6F1TQAAA==",
  "debug_symbols": "ldfBaoNAEIDhd9mzB3V31pm8SinBJCYIosGYQhHfvWtASmlI+1/EUX4X+Tysszs1h/tl3/bn4eZ2b7PrhmM9tUOfptn56nHtdq37dbxN9Ti5XaGSuaY/pTOTJXPntmvcTvLlPXNecWG0CDkuClyUuPC4CLgQXERcYPOAzQM2F2wu2FywuWBzweaCzQWbCzYXbC7YPGLziM0jNo/YPGLziM0jNo/YPGLziM2rP8zL/FdR4KLEhcdFwIXgIuKiwoXiwmih2FyxuWJzxeaKzRWbKzZXbK7YXLG5YXPD5obNDZsbNjdsbtjcsLlhc8PmRZ7zBKqn4TC2Xdde9j/+ZPL18HyjWlbl9jDz/9qoviqeb1RfFgUuSlx4XARcCCuWNH3UY1sfumY1Wm/e++NGlsbp87rd2VCv43BsTvexWXm/ZdfX85IFeXwzaRDNok9LpGW+AA==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is blake2s in brillig\nfn main(x: [u8; 5], result: [u8; 32]) {\n    // Safety: testing context\n    unsafe {\n        assert(blake2s(x) == result);\n    }\n}\n\nunconstrained fn blake2s(x: [u8; 5]) -> [u8; 32] {\n    std::hash::blake2s(x)\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_blake2s/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "blake2s"
  ]
}
